<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Number 1:"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/et_num1"
        android:layout_width="313dp"
        android:layout_height="67dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="-7dp"
        android:layout_toRightOf="@id/tv_num1"
        android:inputType="number" />

    <TextView
        android:id="@+id/tv_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_num1"
        android:layout_marginTop="52dp"
        android:text="Number 2:"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_num2"
        android:layout_width="311dp"
        android:layout_height="66dp"
        android:layout_below="@id/et_num1"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="-5dp"
        android:layout_toRightOf="@id/tv_num2"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_num2"
        android:layout_marginTop="69dp"
        android:text="Multiply" />

    <Button
        android:id="@+id/btn_power"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_multiply"
        android:layout_marginTop="16dp"
        android:text="Power"/>

    <Button
        android:id="@+id/btn_fibonacci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_power"
        android:layout_marginTop="16dp"
        android:text="Fibonacci"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_fibonacci"
        android:layout_marginTop="32dp"
        android:textSize="20sp"/>

</RelativeLayout>